<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_from_the_shoe_store">Welcome From the Shoe Store !!!</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log In</string>
    <string name="welcome_to_the_ultimate_shoe_shopping_experience">Step into a world of style, comfort, and quality at our store! Whether
        you/"'re looking for trendy sneakers, elegant formal shoes, or durable outdoor footwear, we have the perfect pair for every occasion</string>
    <string name="next">Next</string>
    <string name="effortless_shopping_at_your_fingertips">Effortless Shopping at Your Fingertips</string>
    <string name="instructions_desc">Browse, choose, and purchase your favorite shoes with ease. Enjoy a seamless shopping experience, all from the comfort of your hand!</string>
    <string name="shopping_image">Shopping Image</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="submit">Submit</string>
    <string name="enter_shoe_description">Enter shoe description</string>
    <string name="enter_shoe_name">Enter shoe name</string>
</resources>