<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/brown">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1">

            </androidx.constraintlayout.widget.Guideline>
            <ImageView
                android:id="@+id/imgWelcome"
                android:layout_width="@dimen/img_height"
                android:layout_height="@dimen/img_height"
                app:layout_constraintTop_toTopOf="@id/startGuideLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textAlignment="center"
                android:src="@drawable/welcome">
            </ImageView>

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_xs"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/welcome_from_the_shoe_store"
                android:textColor="@color/beige"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:padding="@dimen/margin_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgWelcome" />
            <TextView
                android:id="@+id/txtWelcomeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/welcome_to_the_ultimate_shoe_shopping_experience"
                android:textColor="@color/beige"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/txtWelcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="100dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:text="@string/next"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/margin_medium_xs"
                style="@style/onboarding_button_style"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
